# axum-template

./: .gitignore  Cargo.toml  Dockerfile  README.md  database.db  deploy.sh  dev.sh  package-lock.json  package.json  tailwind.config.js
.github/workflows/: do_deploy.yml
migrations/: 20250726190919_create_users.sql
src/: lib.rs  main.rs
src/extractors/: maybe_current_user.rs  mod.rs
src/handlers/: auth.rs  homepage.rs  mod.rs
src/infrastructure/: auth.rs  mod.rs
src/infrastructure/audit/: ip_address.rs  mod.rs
src/infrastructure/auth/: google.rs  mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/jwt/: mod.rs  user_claims.rs
src/infrastructure/payment/: stripe.rs
src/models/: mod.rs  user.rs
src/repositories/: mod.rs  user_repository.rs
templates/: index.html
