[package]
name = "axum-template"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
askama_web = { version = "0.14.5", features = ["axum-0.8"] }
async-stripe = { version = "0.41.0", features = ["runtime-tokio-hyper"] }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
ip2location = "0.5.4"
jsonwebtoken = "9.3.1"
oauth2 = "5"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "set-header", "compression-full"]}
